--- a/DoyuZB/DoyuZB/Classes/Home/Controller/Home.storyboard
+++ b/DoyuZB/DoyuZB/Classes/Home/Controller/Home.storyboard
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RSF-xw-wLE">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="6nW-gs-oAe">
             <objects>
-                <viewController id="VWz-8t-Sge" sceneMemberID="viewController">
+                <viewController id="VWz-8t-Sge" customClass="HomeViewController" customModule="DoyuZB" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ODp-Or-9q6">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="CmR-E3-CQa"/>
                     </view>
-                    <navigationItem key="navigationItem" id="D08-Gm-e85"/>
+                    <navigationItem key="navigationItem" id="D08-Gm-e85" customClass="Home"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vod-hn-PBZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="800.79999999999995" y="-155.17241379310346"/>
+            <point key="canvasLocation" x="1305" y="-156"/>
         </scene>
         <!--首页-->
         <scene sceneID="Jsz-HB-9YC">
